{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 72,
  "lineage": "c2a28eff-a101-17f6-55de-f9d09dd2fc82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074d828b0dc0b57fc",
            "association_id": "eipassoc-000f6438a8a4c2c4d",
            "domain": "vpc",
            "id": "eipalloc-074d828b0dc0b57fc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aa017dc11f82b6a6",
            "private_dns": "ip-10-0-1-124.ec2.internal",
            "private_ip": "10.0.1.124",
            "public_dns": "ec2-54-209-152-35.compute-1.amazonaws.com",
            "public_ip": "54.209.152.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Terraform elastic ip"
            },
            "tags_all": {
              "Name": "Terraform elastic ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818341956246:internet-gateway/igw-0f69a6a9e481a1508",
            "id": "igw-0f69a6a9e481a1508",
            "owner_id": "818341956246",
            "tags": {
              "Name": "Terraform_provisioned_vpc internet gateway"
            },
            "tags_all": {
              "Name": "Terraform_provisioned_vpc internet gateway"
            },
            "vpc_id": "vpc-0f28dd59d1dfef7d7"
          },
          "dependencies": [
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074d828b0dc0b57fc",
            "connectivity_type": "public",
            "id": "nat-0c8f01aef4e360479",
            "network_interface_id": "eni-0aa017dc11f82b6a6",
            "private_ip": "10.0.1.124",
            "public_ip": "54.209.152.35",
            "subnet_id": "subnet-08e9d3ed4779239c6",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.Terraform_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05e14ce88633e87c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c8f01aef4e360479",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e14ce88633e87c5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.NatGateway",
            "aws_route_table.Terraform_Private_route_table",
            "aws_route_table.Terraform_Public_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f69a6a9e481a1508",
            "id": "r-rtb-002495f74e72516701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002495f74e7251670",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Terraform_igw",
            "aws_route_table.Terraform_Public_route_table",
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Terraform_Private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818341956246:route-table/rtb-05e14ce88633e87c5",
            "id": "rtb-05e14ce88633e87c5",
            "owner_id": "818341956246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8f01aef4e360479",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_provisioned_vpc Private route table"
            },
            "tags_all": {
              "Name": "Terraform_provisioned_vpc Private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f28dd59d1dfef7d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Terraform_Public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818341956246:route-table/rtb-002495f74e7251670",
            "id": "rtb-002495f74e7251670",
            "owner_id": "818341956246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f69a6a9e481a1508",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_provisioned_vpc Public route table"
            },
            "tags_all": {
              "Name": "Terraform_provisioned_vpc Public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f28dd59d1dfef7d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Terraform_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1288456b235c4ac",
            "route_table_id": "rtb-05e14ce88633e87c5",
            "subnet_id": "subnet-051e25350a05fc405"
          },
          "dependencies": [
            "aws_route_table.Terraform_Private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Terraform_private_rt_assoc_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d93cb48933d92024",
            "route_table_id": "rtb-05e14ce88633e87c5",
            "subnet_id": "subnet-07912916ee757c05d"
          },
          "dependencies": [
            "aws_route_table.Terraform_Private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Terraform_public_rt_assoc_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a7b627ad625a802",
            "route_table_id": "rtb-002495f74e7251670",
            "subnet_id": "subnet-08e9d3ed4779239c6"
          },
          "dependencies": [
            "aws_route_table.Terraform_Public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Terraform_public_rt_assoc_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4125b9770d53bcf",
            "route_table_id": "rtb-002495f74e7251670",
            "subnet_id": "subnet-0217fcac9424cad13"
          },
          "dependencies": [
            "aws_route_table.Terraform_Public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818341956246:security-group/sg-0a03546be50e09ccb",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a03546be50e09ccb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "Terraform_provisioned_vpc private security group",
            "name_prefix": "",
            "owner_id": "818341956246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f28dd59d1dfef7d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818341956246:security-group/sg-0107b074a6cb20af4",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0107b074a6cb20af4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Terraform_provisioned_vpc public security group",
            "name_prefix": "",
            "owner_id": "818341956246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f28dd59d1dfef7d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-642687489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a03546be50e09ccb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private_sec_group",
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1538258921",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a03546be50e09ccb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private_sec_group",
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16",
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3107422548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0107b074a6cb20af4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sec_group",
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2121795929",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0107b074a6cb20af4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sec_group",
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818341956246:subnet/subnet-051e25350a05fc405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051e25350a05fc405",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818341956246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_provisioned_vpc us-east-1a private subnet",
              "kubernetes.io/cluster/Terraform_EKS_Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Terraform_provisioned_vpc us-east-1a private subnet",
              "kubernetes.io/cluster/Terraform_EKS_Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f28dd59d1dfef7d7"
          },
          "dependencies": [
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818341956246:subnet/subnet-07912916ee757c05d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.98.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07912916ee757c05d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818341956246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_provisioned_vpc us-east-1b private subnet",
              "kubernetes.io/cluster/Terraform_EKS_Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Terraform_provisioned_vpc us-east-1b private subnet",
              "kubernetes.io/cluster/Terraform_EKS_Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f28dd59d1dfef7d7"
          },
          "dependencies": [
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818341956246:subnet/subnet-08e9d3ed4779239c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e9d3ed4779239c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818341956246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_provisioned_vpc us-east-1a public subnet",
              "kubernetes.io/cluster/Terraform_EKS_Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Terraform_provisioned_vpc us-east-1a public subnet",
              "kubernetes.io/cluster/Terraform_EKS_Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f28dd59d1dfef7d7"
          },
          "dependencies": [
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818341956246:subnet/subnet-0217fcac9424cad13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0217fcac9424cad13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818341956246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_provisioned_vpc us-east-1b public subnet",
              "kubernetes.io/cluster/Terraform_EKS_Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Terraform_provisioned_vpc us-east-1b public subnet",
              "kubernetes.io/cluster/Terraform_EKS_Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f28dd59d1dfef7d7"
          },
          "dependencies": [
            "aws_vpc.Terraform_provisioned_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform_provisioned_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818341956246:vpc/vpc-0f28dd59d1dfef7d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a230cd266a7f201",
            "default_route_table_id": "rtb-09535ba939bd88cc5",
            "default_security_group_id": "sg-0761403c802c0e05d",
            "dhcp_options_id": "dopt-090a01056b561be6b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f28dd59d1dfef7d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09535ba939bd88cc5",
            "owner_id": "818341956246",
            "tags": {
              "Name": "Terraform_provisioned_vpc"
            },
            "tags_all": {
              "Name": "Terraform_provisioned_vpc"
            }
          }
        }
      ]
    }
  ]
}